# SomniaCuratio

./: CMakeLists.txt  README.md  SomniaCuratio.sln
SomniaCuratio/: Background.cpp  Background.h  CombatManager.cpp  CombatManager.h  CombatUI.cpp  CombatUI.h  DialogueManager.cpp  DialogueManager.h  Enemy.cpp  Enemy.h  Entity.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Npc.cpp  Npc.h  Player.cpp  Player.h  SomniaCuratio.cpp  SomniaCuratio.vcxproj  SomniaCuratio.vcxproj.filters  StatsManager.cpp  StatsManager.h  inventory.txt  stats.txt
assets/config/: arachnophobia_assets.json  bureau_assets.json
assets/maps/: arachnophobia.tmx  arachnophobia_tilesets.tsx  bureau.tmx  bureau_tilesets.tsx
src/: main.cpp
src/core/: Game.cpp  Game.h  NightmareOutcome.h  SceneManager.cpp  SceneManager.h
src/entities/: BossSpider.cpp  BossSpider.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Spider.cpp  Spider.h
src/scenes/: ArachnophobiaAssets.h  ArachnophobiaScene.cpp  ArachnophobiaScene.h  ArchnophobiaAssets.h  BureauAssets.h  BureauScene.cpp  BureauScene.h  Scene.h
src/ui/: DialogueManager.cpp  DialogueManager.h  Inventory.cpp  Inventory.h
src/world/: Camera.cpp  Camera.h  TileMap.cpp  TileMap.h
